tests/ui/parser/raw/raw-byte-string-eof.rs
pub fn main() {
    br##"a"#;  //~ ERROR unterminated raw string
}

// ferrocene-annotations: fls_jps9102q0qfi
// Raw Byte String Literals
